[project]
name = "adafruit-2348"
version = "0.1.0"
description = "Viam module for controlling Adafruit DC Motor Hat"
authors = [
    {name = "Ian Whalen"}
]
dependencies = [
    "viam-sdk==0.47.0",
    "adafruit-circuitpython-motorkit==1.6.8",
    "rpi-gpio==0.7.1",
    "pyinstaller==6.14.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39" 
